[EBE-57]: Integrated preview api
